--- a/src/main.css
+++ b/src/main.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: "Aventa";
   font-weight: 400;
-  src: url(./fonts/Aventa/Aventa-Regular.otf);
+  src: url(fonts/Aventa/Aventa-Regular.otf);
 }
 
 @font-face {
   font-family: "Aventa";
   font-weight: 600;
-  src: url(./fonts/Aventa/Aventa-SemiBold.otf);
+  src: url(fonts/Aventa/Aventa-SemiBold.otf);
 }
 
 
 @font-face {
   font-family: "Aventa";
   font-weight: 700;
-  src: url(./fonts/Aventa/Aventa-Bold.otf);
+  src: url(fonts/Aventa/Aventa-Bold.otf);
 }
 
 
